tests/NormalTests/paczka2/big_fuzzy/38470947.err
Error in line 3: caGIrrjj S916 793,6
Error in line 14: IY1BOqo0l A60 39,5
Error in line 30: S940 S552 12,9
Error in line 27: IY1BOqo0l S552 237,5
Error in line 33: xBtaybgi A60 140,2
Error in line 38: xBtaybgi S552 20,5
Error in line 44: xBtaybgi S916 99,7
Error in line 41: 7zbBEXtc S552 10,1
Error in line 58: S940 S916 339,6
Error in line 57: IY1BOqo0l S916 39,3
Error in line 64: IY1BOqo0l S552 327,4
Error in line 55: caGIrrjj S916 93,4
Error in line 74: 7zbBEXtc S552 91,4
Error in line 80: 7zbBEXtc A60 59,2
Error in line 82: xBtaybgi S552 10,5
Error in line 81: lW9a1u S552 91,3
Error in line 105: caGIrrjj S940 70,8
Error in line 113: 7zbBEXtc A60 99,7
Error in line 126: uyGqi S940 91,1
Error in line 148: xBtaybgi S916 52,7
Error in line 156: S940 S552 22,89
Error in line 145: 7zbBEXtc S916 0,1
Error in line 151: S940 S552 7,9
Error in line 160: 7zbBEXtc S940 96,3
Error in line 165: lW9a1u S916 34,1
Error in line 171: lW9a1u S552 84,8
Error in line 182: lW9a1u A60 13,7
Error in line 190: caGIrrjj S552 99,0
Error in line 191: caGIrrjj A60 12,5
Error in line 199: lW9a1u A60 26,4
Error in line 214: IY1BOqo0l A60 17,2
Error in line 223: lW9a1u S916 9,6
Error in line 215: caGIrrjj S916 67,6
Error in line 234: uyGqi S940 24,8
Error in line 232: caGIrrjj S916 70,5
Error in line 219: 7zbBEXtc S916 28,2
